fix(deeisgn): bit better on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,13 @@ button,hr,input{overflow:visible}audio,canvas,progress,video{display:inline-bloc
 :root {
   font-size: 62.5%;
   font-family: 'Space Mono', monospace;
-  background: #fff;
+
+  --c-bg: #fff;
+  --c-layout-bg: #f0f0e6;
+  --c-text: #000;
+  --c-brand: #f04e45;
+
+  background: var(--c-bg);
 }
 
 body {
@@ -25,7 +31,7 @@ body {
   }
   &__inner {
     padding: 6rem;
-    background: #f0f0e6;
+    background: var(--c-layout-bg);
 
     @media only screen and (max-width : 1024px) {
       padding: 3rem;
@@ -34,13 +40,13 @@ body {
 }
 
 a {
-  color: #000;
+  color: var(--c-text);
   text-decoration: none;
 
   &:hover {
     text-decoration-line: underline;
     text-decoration-style: wavy;
-    text-decoration-color: #f04e45;
+    text-decoration-color: var(--c-brand);
   }
 }
 
@@ -55,7 +61,7 @@ h1 {
 
 .title--sub {
   font-size: 1.4rem;
-  color: #f04e45;
+  color: var(--c-brand);
   margin-bottom: 2rem;
   font-weight: normal;
 }
@@ -111,6 +117,10 @@ h1 {
   overflow-x: hidden;
   user-select: none;
   pointer-events: none;
+  will-change: top;
+
+  --top: 0;
+
 }
 
 .logo__symbol,
@@ -130,6 +140,11 @@ h1 {
   z-index: 1;
   margin-top: 3rem;
   position: fixed;
+  will-change: transform;
+
+  @media only screen and (max-width : 1024px) {
+    top: calc(40vh + var(--top));
+  }
 }
 
 .logo__type {
@@ -141,7 +156,7 @@ h1 {
   margin: 0;
   padding: 0;
   line-height: 1;
-  color: #f04e45;
+  color: var(--c-brand);
 
   span {
     color: transparent;
@@ -171,7 +186,7 @@ h1 {
   z-index: 2;
   margin-top: 5rem;
   font-size: 1.6rem;
-  color: #f04e45;
+  color: var(--c-brand);
   margin-bottom: 10rem;
 }
 
@@ -187,14 +202,13 @@ h1 {
 .recommendation__title,
 .recommendation__person {
   position: relative;
-
   font-size: 1.8rem;
   line-height: 1.3;
 }
 
 .recommendation__title {
   font-weight: normal;
-  color: #f04e45;
+  color: var(--c-brand);
 }
 
 .recommendation__quote {
